2017-09-28  Christian Kauhaus <kc@flyingcircus.io>

	* Release 0.3.2

	* Cache: Warn if trying to load a broken cache file, but don't abort.

	* Docs: Add man page (#8).

2017-09-18  Christian Kauhaus <kc@flyingcircus.io>

	* Release 0.3.1

	* ZIP: Add warning while unpacking large ZIP archives.

	* Release 0.3.0

	* Change behaviour of --list: It doesn't register found references by
	default anymore. Specify --list --register to get both (#11).

	* Output: General improvements to make log files easier to read.

	* Output: Skip progress messages when in --list mode.

	* Cache: Don't change cache when in --list mode.

2017-08-30  kc@flyingcircus.io

	* Release 0.2.0

	* The cache is not stored as compressed messagepack file (#11).

	* Decompress zipped files like Python eggs on the fly (#2).

	* Clarify help message.

2017-08-25  Christian Kauhaus <kc@flyingcircus.io>

	* Release 0.1.4

	* Limit I/O load by sleeping a small amount between file accesses
	(stuttering) (#10).

	* Unpack compressed ZIP archives on the fly (#2).

	* Never cross device boundaries (#3).

	* Select/ignore file patterns via --include/--exclude command line
	options, --exclude-from=IGNOREFILE or automagically by placing
	patterns into ~/.userscan-ignore (#5).