@@ -1,3 +1,7 @@
+2017-11-07  Christian Kauhaus <kc@flyingcircus.io>
+
+	* Cache: Reduce memory usage by cropping ctime_nsec values to u8.
+
 2017-09-28  Christian Kauhaus <kc@flyingcircus.io>
 
 	* Release 0.3.2
